--- a/nutrition.html
+++ b/nutrition.html
@@ -50,7 +50,7 @@
       <!-- Barcode Scanner -->
       <section id="barcodeSection">
         <button id="startScan">Scan Barcode</button>
-        <div id="reader" style="width: 300px; height: 300px;"></div>
+        <div id="reader" style="width: 300px; height: 300px; margin-top: 20px;"></div>
       </section>
 
       <section id="foodChartSection">
@@ -164,6 +164,9 @@
 
     // Start barcode scanning
     startScanBtn.addEventListener('click', () => {
+      // Make sure the 'reader' element is visible before starting the scanner
+      readerElement.style.display = 'block'; // Ensure the scanner box is visible
+      
       const html5QrCode = new Html5Qrcode("reader");
       html5QrCode.start(
         { facingMode: "environment" }, 
