--- a/nutrition.html
+++ b/nutrition.html
@@ -3,34 +3,98 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Test Barcode Scanner</title>
+  <title>Barcode Scanner</title>
   <script src="https://unpkg.com/html5-qrcode/minified/html5-qrcode.min.js"></script>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
+      background-color: #f4f4f4;
+    }
+
+    h1 {
+      color: #333;
+    }
+
+    #reader {
+      width: 300px;
+      height: 300px;
+      margin: 20px 0;
+      border: 2px solid #333;
+      border-radius: 10px;
+    }
+
+    button {
+      background-color: #007bff;
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      font-size: 16px;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background-color: #0056b3;
+    }
+
+    #output {
+      margin-top: 20px;
+      font-size: 18px;
+      color: #444;
+    }
+  </style>
 </head>
 <body>
-  <h1>Barcode Scanner Test</h1>
-  <button id="startScan">Start Scan</button>
-  <div id="reader" style="width: 300px; height: 300px; margin-top: 20px;"></div>
+  <h1>Barcode Scanner</h1>
+  <button id="startScan">Start Scanning</button>
+  <div id="reader" style="display: none;"></div>
+  <p id="output"></p>
 
   <script>
+    // Select DOM elements
     const startScanBtn = document.getElementById('startScan');
     const readerElement = document.getElementById('reader');
+    const outputElement = document.getElementById('output');
+
+    let html5QrCode;
 
     startScanBtn.addEventListener('click', () => {
-      console.log("Start Scan button clicked");
-      const html5QrCode = new Html5Qrcode("reader");
-      html5QrCode.start(
-        { facingMode: "environment" }, 
-        { fps: 10, qrbox: 250 },
-        (decodedText) => {
-          console.log("Scanned Text:", decodedText); // Display scanned barcode text
-          alert("Scanned Text: " + decodedText); // Alert scanned barcode
-        },
-        (errorMessage) => {
-          console.error("Scanning Error:", errorMessage); // Log scanning errors
-        }
-      ).catch((err) => {
-        console.error("Failed to start scanner:", err);
-      });
+      if (!html5QrCode) {
+        html5QrCode = new Html5Qrcode("reader");
+      }
+
+      // Show the reader UI
+      readerElement.style.display = 'block';
+      outputElement.textContent = ''; // Clear any previous output
+
+      // Start scanning
+      html5QrCode
+        .start(
+          { facingMode: "environment" }, // Use the back camera
+          { fps: 10, qrbox: 250 }, // Config options
+          (decodedText) => {
+            // Success callback
+            console.log("Scanned Code:", decodedText);
+            outputElement.textContent = `Scanned Code: ${decodedText}`;
+            html5QrCode.stop(); // Stop scanning after success
+            readerElement.style.display = 'none';
+          },
+          (errorMessage) => {
+            // Error callback
+            console.warn("QR Code scan error:", errorMessage);
+          }
+        )
+        .catch((err) => {
+          console.error("Error starting scanner:", err);
+          outputElement.textContent = `Error starting scanner: ${err}`;
+        });
     });
   </script>
 </body>
