--- a/nutrition.html
+++ b/nutrition.html
@@ -4,77 +4,105 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Nutrition Tracker</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://unpkg.com/html5-qrcode/minified/html5-qrcode.min.js"></script>
   <style>
+    /* General Styles */
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Arial', sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #f4f4f4;
+      background-color: #f8f9fa;
     }
+    h1, h2 {
+      text-align: center;
+      color: #333;
+    }
+    button {
+      font-size: 16px;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+    }
+    button:hover {
+      transform: scale(1.05);
+      box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+    }
+
+    /* Tab Bar */
     .tabbar {
       display: flex;
       justify-content: space-around;
       background-color: #007bff;
-      padding: 10px;
+      padding: 15px;
       position: fixed;
       bottom: 0;
       width: 100%;
+      box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
     }
     .tabbar a {
-      color: white;
+      color: #fff;
       text-decoration: none;
-      font-size: 16px;
+      font-size: 18px;
     }
+
+    /* Content Layout */
     .content {
       padding: 20px;
       max-width: 800px;
-      margin: 0 auto;
+      margin: auto;
     }
-    h1 {
-      color: #333;
+    .card {
+      background: linear-gradient(to bottom right, #ffffff, #f1f4f9);
+      box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+      border-radius: 10px;
+      margin: 20px 0;
+      padding: 20px;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
-    button {
-      background-color: #007bff;
-      color: white;
-      border: none;
-      padding: 10px 20px;
-      font-size: 16px;
-      border-radius: 5px;
-      cursor: pointer;
+    .card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
     }
-    button:hover {
-      background-color: #0056b3;
+
+    /* Achievements Section */
+    .achievements {
+      display: flex;
+      justify-content: space-around;
+      margin: 20px 0;
     }
-    input[type="text"], input[type="number"] {
-      padding: 10px;
-      font-size: 16px;
-      margin-bottom: 10px;
-      width: calc(100% - 20px);
-      border: 1px solid #ccc;
-      border-radius: 5px;
+    .achievement {
+      width: 100px;
+      height: 100px;
+      background-color: #f1f4f9;
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
+      transition: all 0.3s ease-in-out;
     }
+    .achievement.unlocked {
+      background-color: #ffd700;
+      color: #fff;
+      transform: scale(1.2);
+      box-shadow: 0 4px 10px rgba(255, 215, 0, 0.5);
+    }
+    .achievement i {
+      font-size: 32px;
+    }
+
+    /* Barcode Scanner */
     #reader {
       width: 300px;
       height: 300px;
       margin: 20px auto;
       display: none;
-      border: 2px solid #333;
+      border: 2px solid #007bff;
       border-radius: 10px;
-    }
-    #foodList ul {
-      list-style: none;
-      padding: 0;
-    }
-    #foodList ul li {
-      padding: 10px;
-      border: 1px solid #ccc;
-      margin-bottom: 5px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
     }
   </style>
 </head>
@@ -89,149 +117,75 @@
   <div class="content">
     <h1>Nutrition Tracker</h1>
 
+    <!-- Achievements Section -->
+    <div class="card">
+      <h2>Your Achievements</h2>
+      <div class="achievements">
+        <div class="achievement" data-achievement="mars">
+          <i class="fas fa-tint"></i>
+        </div>
+        <div class="achievement" data-achievement="jupiter">
+          <i class="fas fa-shoe-prints"></i>
+        </div>
+        <div class="achievement" data-achievement="saturn">
+          <i class="fas fa-bed"></i>
+        </div>
+      </div>
+    </div>
+
     <!-- Food Search Section -->
-    <section>
-      <h2>Search Food</h2>
+    <div class="card">
+      <h2>Search for Food</h2>
       <input type="text" id="foodSearch" placeholder="Search for food...">
-      <button id="searchFoodBtn">Search</button>
-    </section>
+      <button id="searchFoodBtn" style="background-color: #28a745; color: white;">Search</button>
+    </div>
 
     <!-- Food List Section -->
-    <section id="foodListSection" style="display: none;">
+    <div class="card" id="foodListSection" style="display: none;">
       <h2>Food Results</h2>
       <div id="foodList"></div>
       <input type="number" id="foodServings" placeholder="Servings" min="1">
-      <button id="logFoodBtn">Log Food</button>
-    </section>
+      <button id="logFoodBtn" style="background-color: #17a2b8; color: white;">Log Food</button>
+    </div>
 
     <!-- Barcode Scanner Section -->
-    <section>
+    <div class="card">
       <h2>Scan Barcode</h2>
-      <button id="startScanBtn">Start Barcode Scan</button>
+      <button id="startScanBtn" style="background-color: #ff4757; color: white;">Start Barcode Scan</button>
       <div id="reader"></div>
-    </section>
+    </div>
 
     <!-- Logged Foods Section -->
-    <section>
+    <div class="card">
       <h2>Logged Foods</h2>
       <canvas id="foodChart"></canvas>
-    </section>
+    </div>
   </div>
 
   <script>
-    const API_URL = 'https://api.edamam.com/api/food-database/v2/parser';
-    const API_KEY = 'a00e1fa1cfc5ab2e105d054726b5b874';
-    const APP_ID = 'deeb16df';
-
-    const searchFoodBtn = document.getElementById('searchFoodBtn');
-    const foodSearchInput = document.getElementById('foodSearch');
-    const foodListSection = document.getElementById('foodListSection');
-    const foodListDiv = document.getElementById('foodList');
-    const foodServingsInput = document.getElementById('foodServings');
-    const logFoodBtn = document.getElementById('logFoodBtn');
-    const startScanBtn = document.getElementById('startScanBtn');
-    const readerDiv = document.getElementById('reader');
-    const foodChartCanvas = document.getElementById('foodChart');
-
-    let selectedFood = null;
-    let loggedFoods = [];
-
-    // Search for food
-    searchFoodBtn.addEventListener('click', async () => {
-      const query = foodSearchInput.value.trim();
-      if (!query) return alert('Please enter a food to search for.');
-
-      const response = await fetch(`${API_URL}?app_id=${APP_ID}&app_key=${API_KEY}&ingr=${query}`);
-      const data = await response.json();
-
-      displayFoodList(data.hints);
-    });
-
-    // Display food list
-    function displayFoodList(foodItems) {
-      foodListDiv.innerHTML = '';
-      if (foodItems.length === 0) {
-        foodListDiv.innerHTML = '<p>No food found.</p>';
-        return;
-      }
-
-      foodListSection.style.display = 'block';
-      foodItems.forEach(item => {
-        const food = item.food;
-        const foodDiv = document.createElement('div');
-        foodDiv.innerHTML = `
-          <li>
-            <span>${food.label}</span>
-            <button onclick="selectFood(${JSON.stringify(food.nutrients)}, '${food.label}')">Select</button>
-          </li>
-        `;
-        foodListDiv.appendChild(foodDiv);
-      });
-    }
-
-    // Select food
-    window.selectFood = (nutrients, label) => {
-      selectedFood = { nutrients, label };
-      alert(`Selected: ${label}`);
+    const userProgress = {
+      waterIntake: 7, // Consecutive days of meeting the water goal
+      steps: 10, // Consecutive days of meeting the step goal
+      sleep: 12, // Consecutive days of meeting the sleep goal
+    };
+    const achievementsCriteria = {
+      mars: { type: 'waterIntake', goal: 7 },
+      jupiter: { type: 'steps', goal: 14 },
+      saturn: { type: 'sleep', goal: 14 },
     };
 
-    // Log food
-    logFoodBtn.addEventListener('click', () => {
-      if (!selectedFood) return alert('Please select a food first.');
-      const servings = parseInt(foodServingsInput.value, 10) || 1;
-
-      const loggedFood = {
-        name: selectedFood.label,
-        calories: (selectedFood.nutrients.ENERC_KCAL || 0) * servings,
-        protein: (selectedFood.nutrients.PROCNT || 0) * servings,
-        fat: (selectedFood.nutrients.FAT || 0) * servings,
-        carbs: (selectedFood.nutrients.CHOCDF || 0) * servings,
-      };
-
-      loggedFoods.push(loggedFood);
-      renderChart();
-    });
-
-    // Render chart
-    function renderChart() {
-      const ctx = foodChartCanvas.getContext('2d');
-      const chartData = {
-        labels: loggedFoods.map(food => food.name),
-        datasets: [
-          {
-            label: 'Calories',
-            data: loggedFoods.map(food => food.calories),
-            backgroundColor: 'rgba(255, 99, 132, 0.2)',
-          },
-        ],
-      };
-
-      new Chart(ctx, {
-        type: 'bar',
-        data: chartData,
-        options: { responsive: true, scales: { y: { beginAtZero: true } } },
+    function updateAchievements() {
+      const achievements = document.querySelectorAll('.achievement');
+      achievements.forEach((achievement) => {
+        const key = achievement.dataset.achievement;
+        if (userProgress[achievementsCriteria[key].type] >= achievementsCriteria[key].goal) {
+          achievement.classList.add('unlocked');
+        }
       });
     }
+    document.addEventListener('DOMContentLoaded', updateAchievements);
 
-    // Barcode scanning
-    startScanBtn.addEventListener('click', () => {
-      const html5QrCode = new Html5Qrcode("reader");
-      readerDiv.style.display = 'block';
-
-      html5QrCode.start(
-        { facingMode: "environment" },
-        { fps: 10, qrbox: 250 },
-        async (decodedText) => {
-          console.log("Barcode:", decodedText);
-          const response = await fetch(`${API_URL}?app_id=${APP_ID}&app_key=${API_KEY}&barcode=${decodedText}`);
-          const data = await response.json();
-          displayFoodList(data.hints);
-          html5QrCode.stop();
-          readerDiv.style.display = 'none';
-        },
-        (error) => console.error(error)
-      );
-    });
+    // Additional QR scanner and food logging code can be added here
   </script>
 </body>
 </html>
